examples/test/testpolicy19163.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19163
  namespace: namespace376
spec:
  podSelector:
    matchLabels:
      key28: value24
      key25: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value44
          key8: value38
          key43: value28
      podSelector:
        matchLabels:
          key47: value41
          key16: value47
          key44: value11
